kubernetes/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-pod
  template:
    metadata:
      labels:
        app: db-pod
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  database
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  password
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  password
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  username
          image: mysql:5.7
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
          - name:  local-pv
            mountPath:  /var/lib/mysql
      volumes:
      - name:  local-pv
        persistentVolumeClaim:
          claimName: local-pv


          # volumeMounts:
          # - mountPath: /var/lib/mysql
          #     name: local-pv
          #     volumes:
          #     - name: local-pv
          #       persistentVolumeClaim:
          #         claimName: local-pv
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-pod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
