kubernetes/my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-app
  name: my-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - env:
            - name: MYSQL_DB
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  database
            - name: MYSQL_HOST
              valueFrom:
                configMapKeyRef:
                  name: my-app-configmap
                  key:  host
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  password
            - name: MYSQL_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key:  username
          image: zhassan699/maha-task:last
          name: my-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30000
